src/test/ui/specialization/deafult-associated-type-bound-1.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/deafult-associated-type-bound-1.rs:5:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/deafult-associated-type-bound-1.rs:19:22
   |
LL |     default type U = str;
   |                      ^^^ the trait `Clone` is not implemented for `str`
   |
note: required by a bound in `X::U`
  --> $DIR/deafult-associated-type-bound-1.rs:9:13
   |
LL |     type U: Clone;
   |             ^^^^^ required by this bound in `X::U`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
